chore: set url on config

--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,4 @@ remote_theme: diptanilsaha/jekyll-theme-instagram
 theme_config:
   archive: true
 title: baaghermashi
-url: ''
+url: 'https://baaghermashi.bongoarchive.org'
