fix: update instagram username

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ footer_website: bongoarchive.org
 header_img: media/baaghermashi.jpg
 ig_category: Politician
 ig_userid: '68762951285'
-ig_username: baaghermashi
+ig_username: baaghermashi2.0
 ig_website: null
 include:
 - media
